main.css
* {
    background-repeat: no-repeat;
}
body{
    font-family: 'Raleway', sans-serif;
    background-color: rgb(147 188 225);
    color:#343333;
    margin:0;
}
h1{
    font-size:80px;
    color:white;
    margin:0;
}
.hero {
    display: flex;
    justify-content: center;
    width:100%;
    padding-top:50px;
    text-align: center;
}
main {
    width: 100%;
    padding:100px 100px 0px 100px;    
    box-sizing: border-box;
}
.foot {
    width:50px;
    position: absolute;
    opacity: 0.8;
}
/* .right {
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
} */
.active-button {
    background-color: rgb(201, 254, 255);
    outline: none;
    border:none;
    padding:10px 20px;
    border-radius: 10px;;
    cursor:pointer;
    font-size: 16px;
    color: inherit;
    /* display: block; */
}

nav{
    z-index:1;
    position: fixed;
    top:20px;
    right:20px;
}
nav a {
   color:inherit;
   outline:none;
   text-decoration: none;
   border-bottom: 3px solid white;
   padding: 3px 0;
   margin: 3px; 
}
#pages {
    margin-top: 100px;
    display: block;
    max-width: 1200px;
    display: grid;
}
.page {
    margin: 40px 0;
    height: 200px;
    border-radius: 10px;;
    padding:30px;
    /* max-width: 700px; */
    /* width: 700px; */
}
.page h3 {
    max-width:600px;
}
.left{
    /* border-left: 20px solid white; */
    float: left;
    padding-right: 300px;
}
.right{
    /* border-right: 20px solid white; */
    float: right;
    text-align: right;
    padding-left: 300px;
}
.right p {
    float:right;
}
.right h3 {
    float:right
}
#subhero {
    /* color:white; */
    font-size:20px;
    max-width:800px;
    font-weight: bold;
    text-align: center;
    margin-left:100px;
    /* margin-top: 50px; */
    margin:0 auto;
}
#skyline {
    margin: 40px 0;
    max-width:100%;
    z-index:-1
}
.page h3{
    margin-top: 10px;
    font-size:30px;
}
.page p {
    font-weight: 500;
    font-size:15px;
    padding:20px;
    /* background-color: #ffc65e; */
    /* background-color: #f6f2d4; */
    background-color: #bad4ec;
    border-radius: 30px;
    color:#343333;
    max-width: 600px;
}
#speaking {
    width:1070px;
    border-radius:30px;
    position: absolute;
    z-index:-1;
    filter: grayscale(1)

}
#public-speaking-rotterdam {
    background-image: url("mewis.png");
    background-size: 100% auto;
    background-position: 0 70%;
    color:white;
    height: auto;
    /* padding-top:200px; */
    
}
#public-speaking-rotterdam p{
    margin-top:300px;
}
#mewis {
    margin-bottom:150px;
}
h3{
    font-size:30px;
}
#reviews {
    padding:30px;
    text-align: center;
    overflow-x: auto;
    white-space: nowrap;
    margin-left:5vw;
    margin-bottom:70px;
    width:90vw;
    box-sizing: border-box;
}
footer{
    width:100%;
    height:200px;
    margin-top:100px;
    padding:30px 130px;
    margin:0;
    background-color:#75a5d1;
    box-sizing: border-box;
    display:inline-block;
}
.dutch {
    display: none;
}
.language-button {
    position: fixed;
    bottom:30px;
    right:30px;
    z-index:99;
    border-radius: 20%;
    width:30px;
}
.review {
    width:250px;
    background-color: #75a5d1;
    border-radius: 15px;
    padding: 10px;
    box-sizing: border-box;
    vertical-align: top;;
    display: inline-block;
    margin:0 10px;
    white-space:initial;
}
.reviewer-name {
    margin:15px;
}
.review-text{
    margin:0;
    margin-bottom:20px;
}

